--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -90,7 +90,7 @@ span
 
 .overlay
     position: fixed
-    background: #6C0981
+    background: $dark-bg
     top: 0
     right: 0
     width: 100%
@@ -106,7 +106,7 @@ span
         transform: scale(1)
         li
         display: block
-       
+
 
 .overlayMenu
     position: absolute
