--- a/sass/_s1.sass
+++ b/sass/_s1.sass
@@ -24,15 +24,15 @@
             border-top-right-radius: 40% 10%
 
 .line-1
-    width: 33%
-    padding-bottom: 35px
+    width: 20%
+    padding: 35px
 
 .line-2
-    width: 50%
-    padding-bottom: 35px
+    width: 30%
+    padding: 35px
 
 .line-3
-    width: 100%
+    width: 50%
 
 
 
