--- a/sass/_s3.sass
+++ b/sass/_s3.sass
@@ -1,22 +1,21 @@
 .s3
     background: $light-bg
     padding-top: 50px
-    padding-bottom: 30px
+    padding-bottom: 50px
     border-bottom-right-radius: 40% 10%
     border-bottom-left-radius: 40% 10%
 
 .work
     display: flex
     flex-wrap: wrap
-    justify-content: center
+    justify-content: space-around
     &__block
-        // display: flex
-        // justify-content: center
         width: 40%
         margin: 17px 17px
         &:hover
+            width: 42%
             border-radius: 10px
-            box-shadow: 4px 4px 10px 0px rgba(23,20,53,.75)
+            box-shadow: 4px 4px 10px 0px rgba(23,20,53,.5)
     &__img
         width: 100%
     &__link
@@ -25,7 +24,25 @@
         line-height: 25px
         font-size: 18px
         
-        
+#work-content
+    display: none
+
+.show-content
+    margin: 50px 0 30px 50%
+    padding: 20px
+    background-image: linear-gradient(45deg, rgba(23,20,53,1) 0%,rgba(45,42,81,1) 50%,rgba(23,20,53,1) 100%)
+    background-size: 200% auto
+    transition: all .7s
+    color: #ccc
+    text-transform: uppercase
+    font-size: 16px
+    letter-spacing: 2px
+    border-radius: 20px
+    transform: translateX(-50%)
+    &:hover
+        background-position: right center
+    
+    
 
 
 
