--- a/sass/_s4.sass
+++ b/sass/_s4.sass
@@ -99,7 +99,7 @@
         align-items: center
         text-align: left
         margin: 15px
-        color: #fff
+        color: #f1f1f1
         font-size: 24px
         input[type="checkbox"]
             width: 24px
@@ -115,7 +115,7 @@
     align-items: center
     margin-top: 60px
     margin-bottom: 30px
-    color: #ffffff
+    color: #f1f1f1
     font-size: 36px
     font-weight: 700
     &-count
@@ -123,9 +123,9 @@
         height: 60px
         background-color: transparent
         border: none
-        color: $light-color
+        color: $light-color 
         text-align: right
-        font-size: 56px
+        font-size: 56px 
         font-weight: 700
     
 .notice
@@ -133,4 +133,4 @@
     padding: 10px
     &__text
         margin-left: 5px
-        color: #fff
+        color: #f1f1f1
