--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,6 @@
 $dark-color: #171435
 $light-color: #70F1FE
-$dark-bg: linear-gradient(to bottom, rgba(23,20,53,1) 12%,rgba(45,42,81,1) 40%,rgba(45,42,81,1) 46%,rgba(45,42,81,1) 52%,rgba(45,42,81,1) 56%,rgba(23,20,53,1) 100%)
+$dark-bg: linear-gradient(45deg, rgba(23,20,53,1) 12%,rgba(45,42,81,1) 40%,rgba(45,42,81,1) 46%,rgba(45,42,81,1) 52%,rgba(45,42,81,1) 56%,rgba(23,20,53,1) 100%)
 $light-bg: linear-gradient(to right, rgba(112,241,254,0) 0%,rgba(112,241,254,0.2) 9%,rgba(112,241,254,0.2) 15%,rgba(112,241,254,0.2) 19%,rgba(112,241,254,0.2) 52%,rgba(112,241,254,0.2) 81%,rgba(112,241,254,0.2) 83%,rgba(112,241,254,0.1) 93%,rgba(112,241,254,0) 100%)
 *
     margin: 0
@@ -18,6 +18,19 @@ a
     text-decoration: none
     color: #fff
 
+input,
+textarea,
+button
+    outline: none
+    background: transparent
+
+textarea
+    resize: none
+    height: 300px
+
+button
+    cursor: pointer
+    border: none
 
 .h1
     text-transform: uppercase
@@ -27,7 +40,7 @@ a
     text-align: center
     text-transform: uppercase
 #h2
-    color: #fff 
+    color: #ccc
     padding-top: 30px
 .h3
     text-align: center
@@ -36,7 +49,11 @@ a
     font-size: 22px
     font-weight: 500
 #h3
-    color: #fff
+    color: #ccc
+
+.bold
+    font-weight: 700
+    color: $dark-color
 @import 'header'
 @import 's1'
 @import 's2'
@@ -95,12 +112,13 @@ a
             font-size: 44px
 
     .contact
-        &-nav
-            &__nav
-                margin: 20px 10px
-            &__icon
+        flex-direction: column
+        &-media
+            &__ul
                 display: flex
-                width: 70px
+                flex-direction: column
+                align-items: center
+                margin-top: 30px
 
 
 @media (max-width: 768px) 
@@ -128,6 +146,15 @@ a
         align-items: center
         &__block
             width: 70%
+
+    .line
+        &-1
+            width: 24%
+            padding: 15px
+        &-2
+            width: 32%
+            padding: 30px
+    
 
 
     .blocks
@@ -158,15 +185,13 @@ a
         align-items: center
         &__block
             width: 70%
+    
+    .show-content
+        font-size: 14px
 
 
-    .contact
-        &-nav
-            flex-direction: column
-            ul
-                li
-                    font-size: 10px
-                    margin: 20px 7px 10px
+    .form
+        width: 500px
 
 @media (max-width: 576px) 
     .header
@@ -231,10 +256,11 @@ a
     .blocks
         margin: 15px auto
 
-    .contact-nav
-        ul
-            li
-                font-size: 12px
+    .form
+        width: 400px
+    
+    .contact-form
+        margin: 20px 0
 
 @media (max-width: 500px)
     .addition
@@ -254,6 +280,12 @@ a
     .notice
         &__text
             font-size: 11px
+
+    .show-content 
+        font-size: 12px
+
+    .form
+        width: 350px
 
 @media (max-width: 320px) 
     .header
@@ -280,8 +312,12 @@ a
     .s3
         padding-top: 20px
 
+    .h1
+        font-size: 20px
+
     .h2,
     .h3
+        font-size: 18px
         margin-bottom: 15px
 
     .about
@@ -293,7 +329,8 @@ a
         &__block
             width: 90%
 
-    .s4
+    .s4,
+    .s5
         border-top-right-radius: 40% 2%
         border-top-left-radius: 40% 2%
         border-bottom-right-radius: 40% 2%
@@ -317,12 +354,20 @@ a
         &-count
             font-size: 32px
 
-    .contact-nav
-        &__icon
-            width: 50px
-        ul
-            li
-                font-size: 10px
+    .form
+        width: 250px
+
+    .contact
+        padding-bottom: 70px
+        &-media
+            &__subtitle
+                width: 200px
+            &__nav
+                padding: 8px 0
+                font-size: 16px
+
+
+
                 
 
 @media (width: 800px)
